@startuml

title __LAB_BUILDER's Class Diagram__\n

  namespace  {
    namespace om.example.lab_builder {
      class com.example.lab_builder.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_builder {
      class com.example.lab_builder.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_builder {
      namespace model {
        interface com.example.lab_builder.model.Builder {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_builder {
      namespace model {
        class com.example.lab_builder.model.ConcreteBuilder {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_builder {
      namespace model {
        class com.example.lab_builder.model.Director {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_builder {
      namespace model {
        class com.example.lab_builder.model.Indicator {
        }
      }
    }
  }
  

  com.example.lab_builder.HelloApplication -up-|> javafx.application.Application
  com.example.lab_builder.HelloController o-- com.example.lab_builder.model.ConcreteBuilder : builder
  com.example.lab_builder.HelloController o-- com.example.lab_builder.model.Director : director
  com.example.lab_builder.model.ConcreteBuilder .up.|> com.example.lab_builder.model.Builder
  com.example.lab_builder.model.ConcreteBuilder o-- com.example.lab_builder.model.Indicator : indicator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
